# abilities

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  autoformat.sh  pytest.ini  requirements-test.txt  validate_ability.py  validation_output.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: ability-idea.md  ability-request.yml  bug-report.md  bug-report.yml  config.yml  improvement.md  security.yml
.github/PULL_REQUEST_TEMPLATE/: community-ability.md
.github/workflows/: ability-check-report.yml  ability-check.yml  auto-label.yml  branch-merge-check.yml  lint.yml  path-check.yml  publish-cli.yml  publish-extension.yml  python-lint-report.yml  python-lint.yml  security-scan.yml  update-contributors.yml  validate-ability-comment.yml  validate-ability.yml  validate.yml  welcome.yml
__tests__/: README.md  __init__.py  conftest.py  utils.py
__tests__/community/: test_coin_flipper.py
__tests__/fixtures/: __init__.py  sample_api_responses.py  sample_configs.py
__tests__/official/: test_basic_advisor.py  test_weather.py
cli/: .env.example  README.md  pyproject.toml
cli/openhome/: __init__.py  abilities.py  agents.py  audio.py  cli.py  client.py  config.py  endpoints.py  errors.py  local.py  templates.py  testcall.py  transport.py  voice.py  workspace.py
community/: README.md  safar-sathi-.py  safar-sathi-README.md  safar-sathi-background.py  safar-sathi-contacts.md  safar_sathi_state.json
community/Asana Project Manager/: README.md  main.py
community/AsanaManagements/: README.md  main.py
community/Bedtime-Wind-Down/: README.md  main.py
community/CareXpert-Voice-Desk/: README.md  main.py
community/Coin Flipper/: main.py
community/DevOpsInTrenches/: main.py
community/Hackathon Demo/: main.py
community/HubSpot/: README.md  main.py
community/Hubspot/: README.md  main.py
community/KindMind/: README.md  main.py
community/Market-Tracker/: README.md  main.py
community/MicrosoftMail/: README.md  main.py
community/My Slack/: main.py
community/Outlook/: README.md  main.py
community/Pomodoro/: README.md  main.py
community/SaleForce/: README.md  main.py
community/SentinelRed/: README.md  main.py
community/Shark-Tank-Simulator/: README.md  config.json  main.py
community/Spaceflight Tracker/: README.md  main.py
community/Twilio-SMS/: README.md  main.py
community/WeatherPro/: README.md  main.py
community/add-fb-messenger-handler/: README.md  main.py
community/add-flight-information-email/: README.md  main.py
community/agentic-form-filler/: README.md  local_runner.py  main.py
community/air-quality-checker/: README.md  config.json  main.py
community/air-quality-pollen-alert/: README.md  background.py  main.py
community/airthings/: README.md  main.py
community/alarm-timer/: README.md  background.py  config.json  main.py
community/aquaprime-fading/: README.md  config.json  main.py
community/aquaprime-wallet/: README.md  config.json  main.py
community/ari-council/: README.md  main.py
community/ari-obsidian-sync/: README.md  config.json  main.py
community/astronomy-guide/: README.md  config.json  main.py
community/awkward/: README.md  main.py
community/bedtime-stories/: README.md  main.py
docs/: Agent-Memory-and-Context-Injection.md  Building_Great_OpenHome_Abilities.md  Designing_OpenHome_Abilities.md  Futuristic_OpenHome_Abilities.md  OpenHome_SDK_Reference.md  What_Makes_a_Good_Ability.md  autoformat.md  capability-worker-api.md  capability-worker.md  getting-started.md  patterns.md  promotion.md  publishing-to-marketplace.md
immersive-backend/: README.md  main.py
open-trivia/: main.py
outlook_official/: main.py
templates/: README.md
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
(+545 files in other folders)
